Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerUndefined.quorum
Integer x = undefined
integer i = cast(integer, x)